fixing alignment for about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,7 @@ body, html {
     flex: 1;
     line-height: 1.6;
     font-size: 1rem;
+    text-align: left;
 }
 
 /* About Page Background */
